2004-07-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (main): with XML, instead of directly calling
	handle_variable_internal for -D and -U command line flags, hold the
	variable declarations until output document is started.
	(convert_from_loaded_file): handle variables provided with -D and -U
	flags here, just before entering the reader_loop.

2004-07-15  Werner Lemberg  <wl@gnu.org>

	* doc/texinfo.tex (\s): New command to typeset text with a slanted
		font.
	* doc/texinfo.txi: Document @s.

	* makeinfo/cmds.c (command_table): Add @s.
	(cm_s): New function.  Currently the same as cm_i -- it probably
		has to be adapted to Docbook and XML.
	* makeinfo/cmds.h: Add prototype for cm_s.

	* NEWS: Document new command @s.

2004-07-15  Werner Lemberg  <wl@gnu.org>

	* doc/texinfo.tex (\TeX): Adjust \spacefactor to make it act like a
		lowercase letter, not like a period.

2004-07-12  Karl Berry  <karl@gnu.org>

	* texinfo/texinfo.txi (Useful Highlighting): Include
		cross-references to each of the commands.  Suggestion from
		Wolfgang Pausch, 12 Jul 2004 08:26:28 +0200.

	* texinfo/texinfo.txi (Invoking makeinfo),
	* makeinfo/makeinfo.c: mention that --if-noFORMAT also processes
	@ifnotFORMAT blocks.
	Suggestion from Stepan.

2004-07-11  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (discard_until): leave input_text_offset at
		the end of input_text if not found, not at one past the
		end of input_text.  (Had erroneously put that in the block
		only if an error was given.)  The result was a null byte
		after macro expansions.  Report from Werner,
		10 Jul 2004 15:36:40 +0200.		

	* makeinfo/node.c (split_file): fwrite Local Variables trailer so
		it actually gets into the output of the top-level info
		file; don't just insert_string.  
	Report from: Werner LEMBERG, 11 Jul 2004 08:58:13 +0200.

2004-07-10  Karl Berry  <karl@gnu.org>

        * util/texi2pdf: new script.
        * util/Makefile.am: install it.
        * doc/texinfo.txi: document it.
